tweak Bible code

--- a/content/posts/2023-06-08.md
+++ b/content/posts/2023-06-08.md
@@ -69,7 +69,7 @@ Getting back to the four pillars, you can draw lines between them and the four G
 
 # Demise of James, Peter, and Paul
 
-In 62 AD, around the time Luke wrote Acts, James the brother of Jesus was killed by the Sanhedrin in Jerusalem. Paul was still waiting to have his case heard before the highest authority in Rome. As a Roman citizen, he had the right of appeal to Caesar. Not a bad plan -- if he was successful it would be legal under Roman law to spread the word about Jesus. Unfortunately, the Caesar at that time was Nero. According to one Roman historian, Nero wanted to rebuild a large part of Rome so arranged to have it burnt down. When people started to suspect that he was responsible, Nero accused the Christians of perpetrating the crime. This is remarkable given that a short time earlier they had been an obscure group in an out of the way part of the Empire. Perhaps Paul's appeal backfired because after presenting his defence of Christianity, Nero had a group to blame for his own villainous actions.
+In 62 AD, around the time Luke wrote Acts, James the brother of Jesus was killed by the Sanhedrin in Jerusalem. Paul was still waiting to have his case heard before the highest authority in Rome. As a Roman citizen, he had the right of appeal to Caesar. Not a bad plan -- if he was successful it would be legal under Roman law to spread the word about Jesus. Unfortunately, the Caesar at that time was Nero. According to one Roman historian, Nero wanted to rebuild a large part of Rome so arranged to have it burnt down. When people started to suspect that he was responsible, Nero accused the Christians of perpetrating the crime. This is remarkable given that a short time earlier they had been an obscure group in an out of the way part of the Empire. Perhaps Paul's appeal backfired because after presenting his defence of Christianity, Nero had a group to blame for his own villainous acts.
 
 If the early Christians were taking steps to protect their leadership, it didn't work for Peter and Paul. Both were executed around 65 AD during the persecution of Christians that followed the fire of Rome. After this, the only one of the four pillars left standing was John.
 
