tweak Bible code

--- a/content/posts/2023-06-08.md
+++ b/content/posts/2023-06-08.md
@@ -165,7 +165,7 @@ This awesome figure revived John and told him to *write the things which you hav
 
 The first three chapters of Revelation are comprised of letters to the seven churches. By the way, the content of the letter to Ephesus has points of contact with the three letters of John we looked at before.
 
-Next come chapters four and five. In chapter four John is taken up to heaven where he sees a throne and one sitting on the throne -- John doesn't say his name but makes clear that it is the Lord God Almighty, who is being worshipped by everyone around Him. In chapter five John sees a lamb who has been sacrificed. He is identified as the *Lion of the tribe of Judah* and the *Root of David*. For those in the know, these are clear identifications of Jesus Christ. How amazing that John, the Jew who worships the One God, then sees those around the throne fall down and worship the Lamb. Here we have what John never says explicitly in his Gospel but does say implicitly with talk of the word that created everything becoming flesh and the *I am He* of the Garden of Gethsemane -- Jesus is God.
+Next come chapters four and five. In chapter four John is taken up to heaven where he sees a throne and one sitting on the throne -- John doesn't say his name but makes clear that it is the Lord God Almighty, who is being worshipped by everyone around Him. In chapter five John sees a lamb who has been sacrificed. He is identified as the *Lion of the tribe of Judah* and the *Root of David*. For those in the know, these are clear identifications of Jesus Christ. How amazing that John, the Jew who worships the One God, then sees those around the throne fall down and worship the Lamb. Here we have what John never says explicitly in his Gospel but does say implicitly with talk of the *Word* that created everything becoming flesh and the *I am He* of the Garden of Gethsemane -- Jesus is God.
 
 After this comes three cycles of cataclysmic events -- seven seals broken, seven trumpet blasts, and seven bowls of plagues. The third cycle focuses on an unholy trinity -- a beast from the sea, a beast from the earth, and a false prophet. John tells us later that the first beast is the ancient dragon who has been deceiving the world from the beginning. The second beast is a leader -- a pseudo-christ or false messiah. The third is a false prophet who works miracles on behalf of the second beast (Rev 19.20).
 
