--- a/content/posts/2023-06-08.md
+++ b/content/posts/2023-06-08.md
@@ -65,7 +65,7 @@ Getting back to the four pillars, you can draw lines between them and the four G
 
 * Luke is associated with Paul. (Luke travelled around with Paul and is mentioned in some of Paul's letters.)
 
-* John is associated with John (though you won't find a single mention of him by name). 
+* John is associated with John (though you won't find a single mention of him by name in John's Gospel or John's three letters). 
 
 # Demise of James, Peter, and Paul
 
@@ -87,7 +87,7 @@ John's Gospel doesn't mention him by name anywhere. Instead it calls him the *be
 
 [John 21.17-25 USC]
 
-Did you notice the mention of the group? *We know that his testimony is true.* Perhaps they were the ones who wanted to keep John's identity hidden to protect him? But if that's the case, why did they say Peter's name in the clear (i.e. not using code)? It looks like Peter is already in glory, beyond the reach of his enemies. A sobering thought is that all of the seven apostles mentioned by name in John's Gospel were already dead, though it's possible that some were beyond Rome's reach, like Thomas who had taken the message of Christ to India.
+Did you notice the mention of the group? *We know that his testimony is true.* Perhaps they were the ones who wanted to keep John's identity hidden to protect him? But if that's the case, why did they say Peter's name in the clear (i.e. not using code)? It looks like Peter is already in glory, beyond the reach of his enemies. A sobering thought is that all of the seven apostles mentioned by name in John's Gospel had already been killed, though it's possible that some were beyond Rome's reach, like Thomas who had taken the message of Christ to India.
 
 # Put away your sword
 
