Start 230707: In the beginning, part 2

--- a/content/posts/Messages.bib
+++ b/content/posts/Messages.bib
@@ -42,3 +42,39 @@
 	editor = {Gingrich, F. Wilbur},
 	year = {1965},
 }
+
+@article{barker_2_2007,
+	title = {A.2. {P}.{Lond}.{Lit}. 207 and the origin of the nomina sacra: a tentative proposal},
+	volume = {8},
+	copyright = {Copyright (c)},
+	issn = {1406-6203},
+	shorttitle = {A.2. {P}.{Lond}.{Lit}. 207 and the origin of the nomina sacra},
+	url = {http://ojs.utlib.ee/index.php/sht/article/view/8.A.2},
+	doi = {10.12697/sht.2007.8.A.2},
+	abstract = {The origin and development of the nomina sacra (sacred names written in an abbreviated form) found in early Christian  texts is much debated in scholarly circles and no agreement has been  reached. However the use of the nomina sacra in P.Lond.Lit. 207  may help to resolve some of the questions that surround the puzzle of  their origin. P.Lond.Lit. 207 is a portion of papyrus that has broken  off from a roll (24.5 X 25.7 cm), covering Psalms 11(12):7 to 14(15):4.  The scribe of P.Lond.Lit. 207 has consistently written Kurios in an abbreviated form (nomen sacrum), giving only the first and last letters, and a supralinear bar drawn above the abbreviation. On the other hand, Theos is always written uncontracted. This is quite unusual given that Theos in Christian texts is always written as a nomen sacrum.  Could the reason for this practice in P.Lond.Lit. 207 be found in the  Semitic custom of contracting personal names to the first and last  letter? Is Kurios abbreviated in this Semitic fashion to notify  the reader that the word is being used to translate the personal name  (the Tetragrammaton) of the Hebrew deity?},
+	language = {en},
+	urldate = {2023-06-07},
+	journal = {Studia Humaniora Tartuensia},
+	author = {Barker, Don C.},
+	year = {2007},
+	keywords = {Christian texts, nomina sacra, Papyrology, sacred names},
+	pages = {14 pages--14 pages},
+	file = {Full Text PDF:/home/tim/snap/zotero-snap/common/Zotero/storage/B6PTWSG6/Barker - 2007 - A.2. P.Lond.Lit. 207 and the origin of the nomina .pdf:application/pdf},
+}
+
+@article{colwell_definite_1933,
+	title = {A {Definite} {Rule} for the {Use} of the {Article} in the {Greek} {New} {Testament}},
+	volume = {52},
+	issn = {00219231},
+	url = {https://scholarlypublishingcollective.org/sblpress/jbl/article/52/1/12/196232},
+	doi = {10.2307/3259477},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-08},
+	journal = {Journal of Biblical Literature},
+	author = {Colwell, E. C.},
+	month = apr,
+	year = {1933},
+	pages = {12},
+	file = {Colwell - 1933 - A Definite Rule for the Use of the Article in the .pdf:/home/tim/snap/zotero-snap/common/Zotero/storage/QZLE9AWU/Colwell - 1933 - A Definite Rule for the Use of the Article in the .pdf:application/pdf},
+}
