--- a/content/posts/2023-07-07.md
+++ b/content/posts/2023-07-07.md
@@ -7,10 +7,147 @@ bibliography: Messages.bib
 
 # Introduction
 
-... [@colwell_definite_1933]
+A while ago we looked at [Genesis chapter 1](https://www.crosswire.org/study/parallelstudy.jsp?key=Genesis+1%3A1#cv), which starts off with the Hebrew words for *In the beginning*. Today we will look at [John chapter 1](https://www.crosswire.org/study/parallelstudy.jsp?key=John+1%3A1#cv), which starts off with the Greek words for *In the beginning*. Here's a picture of the beginning of John's Gospel in a manuscript called P66, dated around 200 AD:
+
+![John 1 in P66 (~200 AD)](/images/Beginning_P66.jpg)
+
+# About John
+
+John is one of the twelve apostles, son of Zebedee and Salome. We don't know much about Zebedee but we do know about Salome. She was one of the women present at the crucifixion of Jesus (see [Mark 15.40](https://www.crosswire.org/study/parallelstudy.jsp?key=Mark+15%3A40#cv) and [Matthew 27.56](https://www.crosswire.org/study/parallelstudy.jsp?key=Matthew+27%3A56#cv)) who were also first to discover Christ's empty tomb (see [Mark 16.1-6](https://www.crosswire.org/study/parallelstudy.jsp?key=Mark+16%3A1#cv)). John's brother was the Apostle James. Jesus called James and John *the sons of thunder*. Jesus told them off for wanting to call down fire on an [unwelcoming Samaritan village](https://www.crosswire.org/study/parallelstudy.jsp?key=Luke+9%3A54#cv).
+
+While John's name doesn't appear in his Gospel or his Letters -- maybe because his friends wanted to protect him (see [Bible Code](https://tjfinney-messages.netlify.app/posts/2023-06-08/)) -- the early church attributed these writings to him. John's Gospel calls him *the beloved disciple* and John's Letters call him *the Elder*. 
+
+John was one of the three apostles (along with James and Peter) who Jesus had with him when he brought Jairus' daughter back to life ([Mark 5.35-43](https://www.crosswire.org/study/parallelstudy.jsp?key=Mark+5%3A35#cv)), when he was transfigured ([Mark 9.1-8](https://www.crosswire.org/study/parallelstudy.jsp?key=Mark+9%3A1#cv)), and when he prayed in the Garden of Gethsemane ([Mark 14.32-34](https://www.crosswire.org/study/parallelstudy.jsp?key=Mark+14%3A32#cv)). John was the one next to Jesus at the last supper who asked who would betray him. If John is the *other disciple* mentioned at [John 18.15](https://www.crosswire.org/study/parallelstudy.jsp?key=John+18%3A15#cv) then he knew the High Priest and was present when Jesus was being questioned before the Sanhedrin after being arrested in Gethsemane.
+
+Jesus singled out John to look after his mother -- one of the last things he did before dying on the cross ([John 19.25-26](https://www.crosswire.org/study/parallelstudy.jsp?key=John+19%3A25#cv)). On the morning of the resurrection, John ran faster and got to the tomb before Peter after the women who discovered the empty tomb told them about it.
+
+# About John's Gospel
+
+Most agree that John's Gospel was written after the other three Gospels, though opinions vary on exactly when. Many think it was written toward the end of the first century (~90-100 AD) but others put it earlier. Here is what John A. T. Robinson says at the end of a chapter on the dates of John's Gospel and Letters:
+
+> I believe that John represents in date, as in theology, not only the *omega* but also the *alpha* of New Testament development. He bestrides the period like a colossus and marks out its span, the span that lies between two dramatic moments in Jerusalem which boldly we may date with unusual precision. The first was when, on 9 April 30, 'early on the Sunday morning, while it was still dark', one man 'saw and believed' (John 20.1-9). And the second was when, on 26 September 70, 'the dawn of the eighth day of the month Gorpiaeus broke upon Jerusalem in flames' (Josephus, *BJ* 6.407). Over those forty years, I believe, all the books of the New Testament came to completion, and during most of that period, if we are right, the Johannine literature was in the process of maturation.
+
+[Robinson 1976, 311]
+
+# The beginning of John's Gospel
+
+The ancient art of rhetoric had certain rules for good communication. An important one was to say what you are going to speak about near the beginning of your speech. Mark's Gospel starts off by telling us that it is *the Gospel of Jesus Christ, the Son of God*. Matthew and Luke start off with the circumstances surrounding the birth of Jesus. The first sentence of John's Gospel starts off with the beginning of everything:
+
+> εν αρχη ην ο λογος
+
+*In the beginning was the Word*.
+
+This can also be translated as *In the beginning the Word was*. John is telling us something about *the Word* here: in the beginning he was already there -- he already existed before the beginning.
+
+How can that possibly be? To put it another way, how can something exist before time itself? Well it turns out that time might not actually exist, instead being an illusion that has been happening since the physical universe kicked off. ([Julian Barbour](https://en.wikipedia.org/wiki/Julian_Barbour) is a proponent of this view.) 
+
+What's that *Word* word anyway? In Greek it is *logos*. If ever there was a loaded word, this is it. The *Greek–English Lexicon* by Liddell, Scott, and Jones (LSJ) is a good place to discover the meaning of an ancient Greek word. (Liddell was Dean of Christ Church, Oxford, from 1855 to 1891. His daughter Alice is the one for whom Lewis Carroll wrote *Alice's Adventures in Wonderland*. The full LSJ takes up three volumes. Two abridged versions have been published as well. The three are known as the *Little Liddell*, the *Middle Liddell*, and the *Big Liddell*.) LSJ's entry on [logos](http://www.perseus.tufts.edu/hopper/morph?l=logos&la=greek#lexicon) starts with:
+
+> verbal noun of λέγω
+
+This means that *logos* is a way to name a thing that means, roughly, *to speak* -- something like *speech*. However, that's not all. LSJ's entry for *logos* goes on and on, including the following headings for this word's range of meanings:
+
+1. *computation, reckoning, account*
+2. *relation, correspondence, proportion*
+3. *explanation*
+4. inward *debate* of the soul (as in *thinking, reasoning*)
+5. *continuous statement, narrative, oration*
+6. *verbal expression* or *utterance*
+7. *a particular utterance, saying* (e.g. a divine utterance or oracle)
+8. *thing spoken of, subject-matter*
+9. *expression, utterance, speech*
+10. the Word or Wisdom of God, personified as his agent in creation and world-government
+
+So how on earth does one translate εν αρχη ην ο λογος? Richard Moore translates it like this:
+
+> The Meaning was there at the very beginning.
+
+[John 1.1, Under the Southern Cross]
+
+We can use context to get more of a handle on the meaning, though where is the context when this *is* the beginning of John's Gospel? John seems to assume that you know the Genesis account, which begins like this:
+
+> In the beginning God created the heaven and the earth. And the earth was without form, and void; and darkness was upon the face of the deep. And the Spirit of God moved upon the face of the waters. And the earth was a formless and desolate emptiness, and darkness was over the surface of the deep, and the Spirit of God was hovering over the surface of the waters. And God said, Let there be light: and there was light.
+
+[Gen 1.1-3, NASB]
+
+With this in mind, *God's powerful speech* becomes an option when translating John's *logos*.
+
+# The Word was with God
+
+The next few words of John's first sentence give information about where the Word was in the beginning:
+
+> και ο λογος ην προς τον θεον
+
+και is *and*. So far so good. To work out what the rest means we need to know that Greek is inflected. That means that nouns have different forms depending on what part of a phrase they belong to. ο λογος -- ο for *the* and λογος for *Word* -- are nominative, meaning they are the subject of the phrase. In English we indicate the subject -- the main thing being talked about -- by putting it first. The *s* sound at the end of λογος tells us it is nominative. ο is the nominative form of *the*. *The*, which grammarians call *the definite article*, has thirty possible inflections in Greek: nominative, accusative, dative, genitive, and vocative cases; masculine, feminine, and neuter genders; singular and plural numbers; 5 x 3 x 2 = 30. The definite article makes a noun definite -- the particular one of that class of thing that we are talking about. If there is no article, because Greek doesn't have an indefinite article like the English *a* or *an*, then the noun might be definite, indefinite, or qualitative. These are the kinds of things you need to know to before attempting to translate New Testament Greek.
+
+ην -- for *was* -- is the verb in the phrase, and it is what's called a stative verb.
+
+> stative verbs describe situations that are static or unchanging throughout their entire duration
+
+[Wikipedia, Stative verb](https://en.wikipedia.org/wiki/Stative_verb)
+
+τον θεον -- τον for *the* and θεον for *God* -- are accusative, meaning they are the direct object. Here is an English sentence to help explain what this means:
+
+*Hey Jimmy! The cat was put on Alice's mat by Bob.*
+
+*The cat* is the subject -- in Greek it will be in the nominative case. *was put on* is the verb, the doing word. *Alice's mat* is the direct object. We need to unpack it into *the mat of Alice* before concluding that *the mat* is the direct object and will be in the accusative case in Greek. *Alice* will be in the genitive case, meaning that the mat belongs to Alice. *Bob* is the indirect object and will therefore be in the dative case in Greek. *Jimmy* is the one addressed and would therefore be in the vocative case. All of these cases are indicated by the endings of their words, though sometimes you get the same ending for different cases, in which case you need to look at the context to work out what's being said. In English, we use word order and prepositions (e.g. *of*, *by*) to indicate what part each piece plays in the sentence's drama. A typical construction is subject then verb then direct object. In Greek the order doesn't matter that much because cases tell you what parts the nouns are playing; you can put them in any order you like and it will still mean pretty much the same thing. 
+
+So we now have *and the Word was προς God*. προς is a preposition:
+
+> Prepositions and postpositions, together called adpositions (or broadly, in traditional grammar, simply prepositions), are a class of words used to express spatial or temporal relations (in, under, towards, before) or mark various semantic roles (of, for).
+
+[Wikipedia, Preposition and postposition](https://en.wikipedia.org/wiki/Preposition_and_postposition)
+
+Here is what προς can mean when combined with the accusative case (it can mean other things when combined with other cases):
+
+* to
+* toward
+* for the sake of
+* in order to
+* in company with
+* at, about, near, beside
+* with reference to
+* before, in the presence of
+* in comparison with
+
+[Barclay Newman, *Greek-English Dictionary* 154]
+
+Which one do you think best fits here? That's the question the translator has to answer. Many translators put *with* here:
+
+> and the Word was with God
+
+# The Word was God
+
+I'm sure that by now you have had enough of all this grammar. Happily, we are nearly at the end of the beginning of the beginning of John. However, there is more grammar to come. The end of John 1.1 saya,
+
+> και θεος ην ο λογος
+
+This phrase has what Dan Wallace [*Greek Grammar*, 40-42] calls a *subject-predicate nominative* construction. (The *predicate* is the part of a sentence that gives information about the subject as in the *sat on the mat* part of *the cat sat on the mat*.) This construction has a verb (ην = *was*) but the noun before the verb and the noun after it are both nominative -- both could be the subject. This only happens with verbs like *to be* that are *equative*, saying that the two things named are equal in some sense.
+
+There is another detail to notice here: there is no definite article before θεος. (In grammar-speak, a noun without an article is called *anarthrous*.) Not having the article does *not* mean that θεος (*God* in the nominative) is definitely indefinite and that we should translate the phrase as *a god was the Word* or *the Word was a god*. Remember that lack of a definite article does not imply indefiniteness -- instead the meaning can be definite, qualitative, or indefinite, and more effort is required to work out which [Wallace, *Greek Grammar*, 243-5].
+
+There is something called Colwell's rule that has been applied to this phrase to prove that θεος is in fact definite. However, it seems that this is an abuse of Colwell's rule [Wallace, *Greek Grammar*, 256-63]. Dan Wallace looks closely at how best to translate θεος in this phrase and concludes as follows:
+
+> The most likely candidate for θεός is qualitative. This is true both grammatically (for the largest proportion of pre-verbal anarthrous predicate nominatives fall into this category) and theologically (both the theology of the Fourth Gospel and of the NT as a whole). There is a balance between the Word's deity, which was already present in the beginning..., and his humanity, which was added later.... The *idea* of a qualitative θεός here is that the Word had all the attributes and qualities that *the God* (of 1:1b) had. In other words, he shared the *essence* of the Father, though they differed in person. *The construction the evangelist chose to express this idea was the most concise way he could have stated that the Word was God and yet was distinct from the Father.*
+
+[Wallace, *Greek Grammar*, 269, emphasis in original]
+
+So ends today's lesson.
 
 # Acknowledgments
 
 Image of the beginning of the Gospel of St John in the "Coronation Gospels" (Cotton MS. Tiberius A. II, f. 162r) by an unknown medieval artist. British Library ([Medieval and earlier manuscripts blog, May 2011](https://britishlibrary.typepad.co.uk/digitisedmanuscripts/2011/05/index.html)), Public Domain, <https://commons.wikimedia.org/w/index.php?curid=18087744>.
 
-Colwell, E. C. 1933. “A Definite Rule for the Use of the Article in the Greek New Testament.” *Journal of Biblical Literature 52* (1): 12. <https://doi.org/10.2307/3259477>.
+# References
+
+Colwell, E. C. 1933. “A Definite Rule for the Use of the Article in the Greek New Testament.” *Journal of Biblical Literature* 52 (1): 12-21. <https://doi.org/10.2307/3259477>.
+
+Liddell, Henry G., Robert Scott, and Henry S. Jones. 1940. *A Greek-English Lexicon*. 9th ed. Oxford: Clarendon.
+
+Moore, Richard K. 2014. *Under the Southern Cross: The New Testament in Australian English*. Bloomington: WestBow.
+
+Newman, Barclay M. 2010. *A Concise Greek-English Dictionary of the New Testament*. Stuttgart: German Bible Society.
+
+Robinson, John A. T. 1976. *Redating the New Testament*. London: SCM.
+
+Wallace, Daniel. 1997. *Greek Grammar: Beyond the Basics*. Grand Rapids: Zondervan.
