--- a/content/posts/Messages.bib
+++ b/content/posts/Messages.bib
@@ -75,6 +75,38 @@
 	author = {Colwell, E. C.},
 	month = apr,
 	year = {1933},
-	pages = {12},
+	pages = {12--21},
 	file = {Colwell - 1933 - A Definite Rule for the Use of the Article in the .pdf:/home/tim/snap/zotero-snap/common/Zotero/storage/QZLE9AWU/Colwell - 1933 - A Definite Rule for the Use of the Article in the .pdf:application/pdf},
+}
+
+@book{robinson_redating_1976,
+	address = {London},
+	title = {Redating the {New} {Testament}},
+	abstract = {On the basis that the fall of Jerusalem is never mentioned in the New Testament writings as a past fact, Dr. Robinson defends that the books of the New Testament were written before A.D. 70....contradicting, of course, the consensus of generations of Bible scholars.},
+	language = {English},
+	publisher = {SCM},
+	author = {Robinson, John A. T.},
+	year = {1976},
+}
+
+@book{henry_g_liddell_greek_1940,
+	address = {Oxford},
+	edition = {9},
+	title = {A {Greek} {English} {Lexicon}},
+	publisher = {Clarendon},
+	author = {Henry G. Liddell and Robert Scott and Henry S. Jones},
+	year = {1940},
+}
+
+@book{wallace_greek_1997,
+	address = {Grand Rapids, Mich},
+	title = {Greek {Grammar} {Beyond} the {Basics}: {An} {Exegetical} {Syntax} of the {New} {Testament} with {Scripture}, {Subject}, and {Greek} {Word} {Indexes}},
+	isbn = {978-0-310-21895-1},
+	shorttitle = {Greek {Grammar} {Beyond} the {Basics}},
+	abstract = {The first textbook that systematically links syntax and exegesis of the New Testament—perfect for students of Greek who are "second-year" or at an intermediate level.For seminary students, the goal of studying Greek grammar in the first place is to ultimately get beyond the grammar itself and understand it well enough to use it in the accurate exegesis of biblical texts.Greek Grammar Beyond the Basics—the most up-to-date Greek grammar available—integrates the technical requirements for proper Greek interpretation with the actual interests and needs of Bible students. It explores numerous syntactical categories, some of which have not previously been dealt with in print, and has a number of distinguishing features, including:Exegetically significant illustrations, discussed in depth.Semantic situations—or contexts for simple semantics—are developed and analyzed.Expanded definitions and numerous examples and syntactical categories.Grammatical statistics listed at the beginning of major sections.Scores of charts, tables, and graphs.Sound exegesis requires that the exegete consider grammar within a larger framework that includes context, lexeme, and other linguistic features. This textbook faithfully equips intermediate Greek students with the skills they need to do exegesis of biblical texts in a way that is faithful to their intended meaning.The expanded edition contains a subject index, a Greek word index, and page numbers in the Syntax Summary section.},
+	language = {English},
+	publisher = {Zondervan Academic},
+	author = {Wallace, Daniel B.},
+	month = jun,
+	year = {1997},
 }
