--- a/content/posts/2023-07-07.md
+++ b/content/posts/2023-07-07.md
@@ -7,7 +7,7 @@ bibliography: Messages.bib
 
 # Introduction
 
-A while ago we looked at [Genesis chapter 1](https://www.crosswire.org/study/parallelstudy.jsp?key=Genesis+1%3A1#cv), which starts off with the Hebrew words for *In the beginning*. Today we will look at [John chapter 1](https://www.crosswire.org/study/parallelstudy.jsp?key=John+1%3A1#cv), which starts off with the Greek words for *In the beginning*. Here's a picture of the beginning of John's Gospel in a manuscript called P66, dated around 200 AD:
+A while ago we looked at [Genesis chapter 1](https://www.crosswire.org/study/parallelstudy.jsp?key=Genesis+1%3A1#cv), which starts off with the Hebrew words for *In the beginning*. Today we will look at [John chapter 1, verse 1](https://www.crosswire.org/study/parallelstudy.jsp?key=John+1%3A1#cv), which starts off with the Greek words for *In the beginning*. Here's a picture of the beginning of John's Gospel in a manuscript called P66, dated around 200 AD:
 
 ![John 1 in P66 (~200 AD)](/images/Beginning_P66.jpg)
 
@@ -90,7 +90,9 @@ The next few words of John's first sentence give information about where the Wor
 
 *Hey Jimmy! The cat was put on Alice's mat by Bob.*
 
-*The cat* is the subject -- in Greek it will be in the nominative case. *was put on* is the verb, the doing word. *Alice's mat* is the direct object. We need to unpack it into *the mat of Alice* before concluding that *the mat* is the direct object and will be in the accusative case in Greek. *Alice* will be in the genitive case, meaning that the mat belongs to Alice. *Bob* is the indirect object and will therefore be in the dative case in Greek. *Jimmy* is the one addressed and would therefore be in the vocative case. All of these cases are indicated by the endings of their words, though sometimes you get the same ending for different cases, in which case you need to look at the context to work out what's being said. In English, we use word order and prepositions (e.g. *of*, *by*) to indicate what part each piece plays in the sentence's drama. A typical construction is subject then verb then direct object. In Greek the order doesn't matter that much because cases tell you what parts the nouns are playing; you can put them in any order you like and it will still mean pretty much the same thing. 
+*The cat* is the subject -- in Greek it will be in the nominative case; *was put on* is the verb, the doing word; *Alice's mat* is the direct object. We need to unpack it into *the mat of Alice* before concluding that *the mat* is the direct object and will be in the accusative case in Greek. *Alice* will be in the genitive case, meaning that the mat belongs to Alice; *Bob* is the indirect object and will therefore be in the dative case in Greek; *Jimmy* is the one addressed and would therefore be in the vocative case.
+
+In Greek, all of these cases are indicated by the endings of their words, though sometimes you get the same ending for different cases, in which case you need to look at the context to work out what's being said. In English, we use word order and prepositions (e.g. *of*, *by*) to indicate what part each piece plays in the sentence's drama. A typical construction is subject then verb then direct object. In Greek the order doesn't matter that much because cases tell you what parts the nouns are playing; you can put them in any order you like and it will still mean pretty much the same thing. 
 
 So we now have *and the Word was προς God*. προς is a preposition:
 
@@ -118,7 +120,7 @@ Which one do you think best fits here? That's the question the translator has to
 
 # The Word was God
 
-I'm sure that by now you have had enough of all this grammar. Happily, we are nearly at the end of the beginning of the beginning of John. However, there is more grammar to come. The end of John 1.1 saya,
+I'm sure that by now you have had enough of all this grammar. Happily, we are nearly at the end of the beginning of the beginning of John. However, there is more grammar to come. The end of John 1.1 says,
 
 > και θεος ην ο λογος
 
