--- a/content/posts/2023-10-24.md
+++ b/content/posts/2023-10-24.md
@@ -1,22 +1,87 @@
 ---
-title: "Jesus is the Christ"
-featured_image: /images/A_woman.webp
+title: "Some woman"
+featured_image: /images/A_woman.jpg
 date: "2023-10-24"
 bibliography: Messages.bib
 ---
 
+## Reading
+
+[Luke 7.36-50](https://www.crosswire.org/study/parallelstudy.jsp?key=Luke+7%3A36#cv)
+
 ## The mission of Jesus Christ
 
-...
+Luke's Gospel tells us that Jesus began his mission by reading from the Book of Isaiah:
 
-## What does Christ mean?
+> The Spirit of the Lord is upon me because he has anointed me to preach the gospel to the poor
 
-...
+> he has sent me to heal the brokenhearted
+
+> to preach deliverance to the captives and recovery of sight to the blind
+
+> to set at liberty those who are bruised
+
+> to preach the favorable year of the Lord.
+
+[Luke 4.18-19 AV]
+
+Here is a question: Who anointed Jesus? Who do you think it was?
+
+## What does *anointed* mean?
+
+Jesus said, *the Spirit of the Lord is upon me because he has anointed me to preach the gospel to the poor*. What does that *anointed* word mean? What does it signify?
+
+Can I have four volunteers from the four corners of the Church?
+
+As far as a physical act is concerned, this is what anointing means. It is putting oil onto someone.
+
+As far as its significance goes, here is what Wikipedia says:
+
+> Anointing is the ritual act of pouring aromatic oil over a person's head or entire body... Scented oils are used as perfumes and sharing them is an act of hospitality. Their use to introduce a divine influence or presence is recorded from the earliest times... In present usage, *anointing* is typically used for ceremonial blessings such as the coronation of European monarchs. This continues an earlier Hebrew practice most famously observed in the anointings of Aaron as high priest and both Saul and David by the prophet Samuel. The concept is important to the figure of the Messiah or the Christ (Hebrew and Greek for "The Anointed One")... Anointing served and serves three distinct purposes: it is regarded as a means of health and comfort, as a token of honor, and as a symbol of consecration...
+
+[Wikipedia, *Anointing*](https://en.wikipedia.org/wiki/Anointing)
 
 ## When Samuel anointed David
 
-...
+Let's look at when Samuel anointed David.
 
+> Fill your horn with oil and go; I will send you to Jesse the Bethlehemite, because I have chosen a king for Myself among his sons.
+	
+> But Samuel said, *How can I go? When Saul hears about it, he will kill me.* But the Lord said, Take a heifer with you and say, *I have come to sacrifice to the Lord.*
+	
+> And you shall invite Jesse to the sacrifice, and I will let you know what you shall do; and you shall anoint for Me the one whom I designate to you.
+
+> So Samuel did what the Lord told him, and he came to Bethlehem. Then the elders of the city came trembling to meet him and said, *Do you come in peace?*
+
+> And he said, *In peace; I have come to sacrifice to the Lord. Consecrate yourselves and come with me to the sacrifice.* He also consecrated Jesse and his sons and invited them to the sacrifice.
+
+> When they entered, he looked at Eliab and thought, *Surely the Lord’s anointed is standing before Him.*
+
+> But the Lord said to Samuel, *Do not look at his appearance or at the height of his stature, because I have rejected him; for God does not see as man sees, since man looks at the outward appearance, but the Lord looks at the heart.*
+
+> Then Jesse called Abinadab and had him pass before Samuel. But he said, *The Lord has not chosen this one, either.*
+
+> Next Jesse had Shammah pass by. And he said, *The Lord has not chosen this one, either.*
+
+> So Jesse had seven of his sons pass before Samuel. But Samuel said to Jesse, *The Lord has not chosen these.*
+
+> Then Samuel said to Jesse, *Are these all the boys?* And he said, *The youngest is still left, but behold, he is tending the sheep.* So Samuel said to Jesse, *Send word and bring him; for we will not take our places at the table until he comes here.*
+
+> So he sent word and brought him in. Now he was reddish, with beautiful eyes and a handsome appearance. And the Lord said, *Arise, anoint him; for this is he.*
+
+> So Samuel took the horn of oil and anointed him in the midst of his brothers; and the Spirit of the Lord rushed upon David from that day forward.
+
+[1 Sam 16.1-13 NASB]
+
+Here is another question: Who anointed David? Who do you think it was?
+
+## Some woman
+
+Now we come to when Jesus was invited to eat with a Pharisee named Simon. A woman came in during the meal and cried so much that she wet his feet with her tears. This was not a few quiet sobs. The Greek word is κλαίουσα, and it means [cry, wail, lament; any loud expression of pain or sorrow](http://www.perseus.tufts.edu/hopper/morph?l=%CE%BA%CE%BB%CE%B1%CE%AF%CE%BF%CF%85%CF%83%CE%B1&la=greek#lexicon)
+
+## Song
+
+https://www.youtube.com/watch?v=w3V3HU_eg5E
 
 ## Acknowledgments
 
